# commerce-tools

./: .dockerignore  .env.example  .mcp.json  DEEP_AGENT_IMPLEMENTATION_SUMMARY.md  Dockerfile  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.github/workflows/: publish.yml
agents/: _base.ts
commands/: _registry.ts
core/: hooks.ts  router.ts  session.ts  tool-runner.ts
deep-agent/: .env.example  README.md
deep-agent/backend/: pyproject.toml
deep-agent/backend/app/: __init__.py  config.py  main.py
deep-agent/backend/app/agent/: __init__.py  factory.py  prompts.py
deep-agent/backend/app/api/: routes_chat.py  routes_health.py  routes_providers.py  schemas.py
deep-agent/backend/app/mcp/: client.py
deep-agent/backend/app/providers/: anthropic_provider.py  base.py  bedrock_provider.py  openai_compatible.py  openai_provider.py  openrouter_provider.py  registry.py
deep-agent/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.tsbuildinfo
deep-agent/frontend/src/: App.css  App.tsx  index.css
mcps/: _registry.ts
mcps/jira/: server.ts  tools.ts  types.ts
mcps/jira/prompts/: workflow.ts
mcps/newrelic/: queries.ts  server.ts  tools.ts  types.ts
mcps/newrelic/prompts/: commerce.ts  security.ts
plugins/: README.md  build.ts
plugins/claude/: .mcp.json
plugins/cursor/: README.md  build.ts  mcp.json
providers/_base/: agent.ts  provider.ts  types.ts
scripts/: release.sh
skills/: _loader.ts
(+42 files in other folders)
