[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerce-tools-deep-agent"
version = "0.1.0"
description = "Web-based Deep Agent for Adobe Commerce investigation"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "langchain>=0.1.0",
  "langchain-core>=0.1.0",
  "langchain-anthropic>=0.1.0",
  "langchain-aws>=0.1.0",
  "langchain-openai>=0.1.0",
  "langchain-mcp-adapters>=0.1.0",
  "deepagents>=0.1.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21.0",
  "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
